[package]
name = "lasagnedb"
version = "0.1.0"
edition = "2021"
authors = ["XUQING"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#byteorder = "1.4.3"
bytes = "1.3.0"
crc = "1.7.0"
thiserror = "1.0.38"
anyhow = "1.0"
moka = "0.10"
snap = "1"
rand = "0.8.4"
crossbeam = "0.8.2"
crossbeam-skiplist = "0.1"
parking_lot = "0.12.1"
ouroboros = "0.15.6"
chrono = "0.4.23"
tracing = "0.1"

[dev-dependencies]
tempfile = "3.3.0"
opentelemetry-jaeger = "0.15"
tracing-opentelemetry = "0.15"
tracing-subscriber = "0.2"