[package]
name = "lasagnedb-http-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.3.0"
tempfile = "3.3.0"
actix-web = "4.3.1"
futures = "0.3.27"
serde = { version = "1.0.159", features = ["derive"] }
rusty-leveldb = "1.0.6"
lasagnedb = { path = "../../" }
tracing = "0.1"
opentelemetry-jaeger = "0.15"
tracing-opentelemetry = "0.15"
tracing-subscriber = "0.2"